--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
-{
+{  
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
@@ -28,7 +28,8 @@
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
-    "strictInputAccessModifiers": true,
+    "strictInputAccessModifiers": true,   
+    "strictPropertyInitialization": false,
     "strictTemplates": true
   }
 }
